--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.0
+URL: https://github.com/ThangN22/MATH4573NGUY24
+BugReports: https://github.com/ThangN22/MATH4573NGUY24/issues
