--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,11 @@ LazyData: true
 RoxygenNote: 7.3.0
 URL: https://github.com/ThangN22/MATH4573NGUY24
 BugReports: https://github.com/ThangN22/MATH4573NGUY24/issues
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Depends: 
+    R (>= 2.10)
+VignetteBuilder: knitr
